--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: Build with dotnet
-      run: dotnet build Soutce/Hive.SeedWorks.csproj --configuration Release
+      run: dotnet build 'Soutce/Hive.SeedWorks.csproj' --configuration Release
