--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,8 +1,8 @@
 name: .NET Core
 
-on: 
+on:
   push:
-    branches: 
+    branches:
       - master
     paths:
       - 'Source/*
@@ -18,4 +18,4 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: Build with dotnet
-      run: dotnet build 'Source/Hive.SeedWorks.csproj' --configuration Release
+      run: dotnet build Source/Hive.SeedWorks.csproj --configuration Release
