--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - master
-    paths:
-      - Source/*
+    # paths:
+      # - Source/*
 
 jobs:
   build:
@@ -16,6 +16,6 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 2.2.108
+        dotnet-version: 2.2.207 #108
     - name: Build with dotnet
       run: dotnet build Source/Hive.SeedWorks.csproj --configuration Release
