--- a/.github/workflows/employee.yml
+++ b/.github/workflows/employee.yml
@@ -19,4 +19,4 @@ jobs:
       with:
         dotnet-version: 2.2.207
     - name: Build with dotnet
-      run: dotnet build Examples/Hive.User/Hive.User.csproj --configuration Release
+      run: dotnet build Examples/Hive.Employee/Hive.Employee.csproj --configuration Release
