--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,4 +23,5 @@ jobs:
     - name: Project pack
       run : dotnet pack Source/Hive.SeedWorks.csproj --configuration Release --output bin/nupkgs
     - name: Nuget push
-      run : dotnet nuget push "bin/nupkgs/Hive.SeedWorks.0.0.1.nupkg" --source "github"
+      run : dotnet nuget push "/home/runner/work/Hive/Hive/Source/bin/nupkgs/Hive.SeedWorks.0.0.1.nupkg" --source "https://github.com/Ekstrem/Hive"
+      # run : dotnet nuget push "bin/nupkgs/Hive.SeedWorks.0.0.1.nupkg" --source "github"
