project structure change

--- a/Examples/Hive.Employee/Hive.Employee.csproj
+++ b/Examples/Hive.Employee/Hive.Employee.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\Hive.SeedWorks.csproj" />
+    <ProjectReference Include="..\..\Source\Hive.SeedWorks\Hive.SeedWorks.csproj" />
   </ItemGroup>
 
 </Project>
