--- a/Examples/Hive.Employee.Tests/Hive.Employee.Tests.csproj
+++ b/Examples/Hive.Employee.Tests/Hive.Employee.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -13,7 +13,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Source\Hive.SeedWorks.csproj" />
     <ProjectReference Include="..\Hive.Employee\Hive.Employee.csproj" />
   </ItemGroup>
 
