--- a/Source/Hive.SeedWorks/Hive.SeedWorks.csproj
+++ b/Source/Hive.SeedWorks/Hive.SeedWorks.csproj
@@ -15,32 +15,16 @@
     <AssemblyVersion>0.0.1.2</AssemblyVersion>
     <PackageIconUrl></PackageIconUrl>
     <Description>Базовые интерфейсы для реализации Domain Driven Design.</Description>
-    <DocumentationFile>Fida.Common.Primitives.xml</DocumentationFile>
+    <DocumentationFile>Hive.SeedWorks.xml</DocumentationFile>
     <AssemblyName>Hive.SeedWorks</AssemblyName>
     <RootNamespace>Hive.SeedWorks</RootNamespace>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>..\Bin\Docs\Fida.Common.Primitives.xml</DocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp2.2|AnyCPU'">
-    <OutputPath>..\Bin\</OutputPath>
-  </PropertyGroup>
-
-
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.3" />
     <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
   </ItemGroup>
 
 </Project>
