--- a/Source/Hive.SeedWorks/Hive.SeedWorks.csproj
+++ b/Source/Hive.SeedWorks/Hive.SeedWorks.csproj
@@ -23,6 +23,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="LICENSE" />
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.3" />
     <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
   </ItemGroup>
