FCP last worked variant

--- a/Source/Hive.SeedWorks.csproj
+++ b/Source/Hive.SeedWorks.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.2</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <Version>0.0.1</Version>
     <Authors>Войтов Евгений</Authors>
@@ -20,6 +19,7 @@
     <RootNamespace>Hive.SeedWorks</RootNamespace>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
