--- a/.github/workflows/seedworks.yml
+++ b/.github/workflows/seedworks.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 2.2.207 #108
+        dotnet-version: 3.1
     - name: Build with dotnet
       run: dotnet build Source/Hive.SeedWorks.csproj --configuration Release
