--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,5 +23,6 @@ jobs:
     - name: Project pack
       run : dotnet pack Source/Hive.SeedWorks.csproj --configuration Release --output bin/nupkgs
     - name: Nuget push
-      run : dotnet nuget push "bin/nupkgs/Hive.SeedWorks.0.0.1.nupkg" --source "https://github.com/Ekstrem/Hive"
-      # run : dotnet nuget push "bin/nupkgs/Hive.SeedWorks.0.0.1.nupkg" --source "github"
+      run : dotnet nuget push "bin/nupkgs/*.nupkg" -k ${GITHUB_TOKEN} --skip-duplicate --no-symbols #--source "https://github.com/Ekstrem/Hive"
+      env : GITHUB_TOKEN: ${{ secrets.PACK_ACCESS }}
+      # run : dotnet nuget push "bin/nupkgs/*" --source "github"
