--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,11 +18,15 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1
+        source-url: https://nuget.pkg.github.com/<organization>/index.json
+      env:
+          NUGET_AUTH_TOKEN: ${{secrets.PACK_ACCESS}}
+    
     - name: Build with dotnet
       run: dotnet build Source/Hive.SeedWorks.csproj --configuration Release
+      
     - name: Project pack
       run : dotnet pack Source/Hive.SeedWorks.csproj --configuration Release --output bin/nupkgs
+      
     - name: Nuget push
       run : dotnet nuget push "bin/nupkgs/*.nupkg" -k ${GITHUB_TOKEN} --skip-duplicate --no-symbols #--source "https://github.com/Ekstrem/Hive"
-      env : GITHUB_TOKEN: ${{ secrets.PACK_ACCESS }}
-      # run : dotnet nuget push "bin/nupkgs/*" --source "github"
