--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1
-        source-url: https://nuget.pkg.github.com/<organization>/index.json
+        source-url: https://nuget.pkg.github.com/Hive/index.json
       env:
           NUGET_AUTH_TOKEN: ${{secrets.PACK_ACCESS}}
     
