--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1
-        source-url: https://nuget.pkg.github.com/Hive/index.json
+        source-url: https://nuget.pkg.github.com/Ekstrem/index.json
       env:
           NUGET_AUTH_TOKEN: ${{secrets.PACK_ACCESS}}
     
@@ -29,5 +29,5 @@ jobs:
       run : dotnet pack Source/Hive.SeedWorks.csproj --configuration Release --output bin/nupkgs
       
     - name: Nuget push
-      run : dotnet nuget push "bin/nupkgs/*.nupkg" -k ${GITHUB_TOKEN} --skip-duplicate --no-symbols true
+      run : dotnet nuget push "bin/nupkgs/*.nupkg" -k ${NUGET_AUTH_TOKEN} --skip-duplicate --no-symbols true
       #--source "https://github.com/Ekstrem/Hive"
