--- a/.github/workflows/seedworks.yml
+++ b/.github/workflows/seedworks.yml
@@ -28,6 +28,8 @@ jobs:
     - name: Project pack
       run : dotnet pack Source/Hive.SeedWorks.csproj --configuration Release --output bin/nupkgs
       
-    - name: Nuget push
+    - name: Nuget push to GitHub
       run : dotnet nuget push "bin/nupkgs/*.nupkg" --api-key ${{secrets.PACK_ACCESS}} --skip-duplicate --no-symbols true
-      #--source "https://github.com/Ekstrem/Hive"
+      
+    - name: Nuget push NugetOrg
+      run : dotnet nuget push "bin/nupkgs/*.nupkg" --api-key ${{secrets.NUORG}} --skip-duplicate --no-symbols true
